2010-10-19  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c :
	  Only target running jobs with -j all (not completed for example)

	* Makefile.am, configure.ac, testsuite/* :
	  Remove dejagnu based testsuite.

2010-10-04  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/privsep.c, src/pdsh/privsep.h :
	  Switch to rresvport_af.

	* src/pdsh/mod.c :
	  Fix reference of uninitialized modules, especially during
	  options processing.

2010-09-29  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_exec.m4 :
	  Fix references to SSH in AC_EXEC

	* scripts/dshbak :
	  Fix googlecode issue 5 reported by Mattias Slabanja,
	  where dshbak was failing to coalesce differently zero-padded
	  hosts with -c.

2010-09-13  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_dshgroup.m4, configure :
	  Update --with-dshgroups help string to match other
	  configure --help output. Fix missing ','.

	* src/pdsh/mod.h, src/pdsh/mod.c, src/pdsh/opt.c :
	  Don't unload conflicting (uninitialized) modules, instead
	  keep them for -V and -L output, and mark then as conflicting
	  to avoid confusion.

	* src/pdsh/rcmd.c, src/pdsh/opt.c :
	  Fix a couple of compiler warnings.

2010-09-10  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/Makefile.am, src/modules/Makefile.in :
	  Use 'target_la_CPPFLAGS' instead of AM_CPPFLAGS for
	  per-module CPPFLAGS.

	* src/modules/torque.c :
	  Error in pbs_disconnect() shouldn't be fatal.

	* src/modules/torque.c :
	  Fix segfault with no default PBS server.

	* src/modules/torque.c :
	  Minor fixup of some error messages in Torque module.

	* : Re-run ./bootstrap

	* config/ac_torque.m4, configure.ac, doc/pdsh.1.in,
	  pdsh.spec, src/modules/Makefile.am, src/modules/torque.c :
	  Add new Torque/PBS module from Mattias Slabanja.

2010-09-03  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.22.

	* src/pdsh/mod.c :
	  Print an error if requested modules fail to initialize.

	* src/pdsh/mod.c :